--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+    .btn-type {
+        @apply text-center font-bold py-2 px-4 rounded mx-auto shadow-lg
+    }
+
+    .btn-direct {
+        @apply text-center font-bold py-2 px-8 rounded bg-gray-600 text-white mx-24 mt-4 shadow-lg
+    }
+
+    .grid-layout-main {
+        @apply grid grid-cols-3 justify-center text-white font-mono
+    }
+
+    .center {
+        @apply mx-auto items-center justify-center
+    }
 }
